# AURA-AIOSCPU

./: .gitignore  BUILD_AND_TOOLING.md  Dockerfile  FIRST_INTERVIEW.md  INSTALL.md  KERNEL_ARCHITECTURE.md  MANUAL.md  OS_FEATURES.md  OS_VISION_QUESTIONS.md  README.md  STORAGE_ARCHITECTURE.md  USAGE.md  build.py  install_termux.sh  pyproject.toml  requirements.txt
aura/: __init__.py  context_builder.py  introspection.py  memory.py  personality.py
bridge/: __init__.py  android.py  base.py  linux.py  macos.py  windows.py
cloud/: virtual_cpu.py
config/: default.json
deploy/: railway.json  render.yaml
hal/: __init__.py
host_bridge/: __init__.py  android.py
kernel/: __init__.py  api.py  config.py  debug.py  device_profile.py  event_bus.py  loop.py  mirror.py  override.py  permissions.py  privilege.py  scheduler.py  watchdog.py
launch/: aura_init.py  boot.py  launcher.py
models/: __init__.py  model_manager.py
rootfs.pre_rollback/: _rollback_test_sentinel  layout.json
services/: __init__.py  build_service.py  command_channel.py  health-monitor.service  health_monitor.py  job-queue.service  job_queue.py  logging.service  logging_service.py  module_builder.py  network.service  network_service.py  package_manager.py  registry.py  storage.service  storage_service.py  web_terminal.py
shell/: __init__.py  plugin_loader.py
tests/: test_ai_engines.py  test_aura.py  test_aura_logs.py  test_aura_service_status.py  test_aura_sys_info.py  test_bridge.py  test_bridge_contract.py  test_build_service.py  test_build_snapshot.py  test_check_requirements.py  test_hal.py  (+41 more)
(+39 files in other folders)
