[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aura-aioscpu"
version = "0.1.0"
description = "AI-Driven Universal OS — Runs on Anything. Repairs Itself. Thinks for You."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
]

[project.optional-dependencies]
ai = [
    "llama-cpp-python>=0.2",
    "onnxruntime>=1.16",
]
metrics = [
    "psutil>=5.9",
]
all = [
    "llama-cpp-python>=0.2",
    "onnxruntime>=1.16",
    "psutil>=5.9",
]

[project.scripts]
aura = "tools.aura_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aura*", "bridge*", "hal*", "host_bridge*", "kernel*", "launch*", "models*", "services*", "shell*", "tools*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
